src/App.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Special Elite', serif;
    font-weight: bold;
}

a {
    text-decoration: none;
    color: inherit;
}

a:hover {
    text-decoration: underline;
}

p {
    font-size: 16px;
    line-height: 160%;
}   

p a {
    text-decoration: underline;
}

.postGrid {
  width: 130%;
}

.showDisplayNavArrow {
  font-family: 'Open Sans', sans-serif;
}

.gridMap {
  width: 310px;
  height: 260px;
  box-shadow: 3px 3px 3px #EDEDED;
  box-sizing: border-box;
  border: 3px solid #444444;
}

.kafka {
  width: 55vw;
  margin-bottom: 350px;
}

.gridMapVideo {
  width: 310px;
  height: 210px;
  border: 3px solid #444444;
  box-sizing: border-box;
  box-shadow: 3px 3px 3px #EDEDED;
}

.gridMap p, .gridMapVideo p {
  margin-top: 1px;
  font-size: 20px;
  width: 80%;
}

.gridMap:hover {
  opacity: 0.8;
}

.mailinglist {
  opacity: 0.9;
}

.pageTitle {
    opacity: 0.93;
    margin-top: 20px;
    margin-bottom: 25px;
    height: 1.5em;
}

.newsTitle {
    opacity: 0.93;
    margin-top: 0px;
    margin-bottom: 5px;
    height: 1.5em;
}


/* NAVBAR */
.oktHeader {
    font-family: sans-serif;
    position: fixed;
    top: 0;
    width: 100%;
    text-align: left;
    padding-top: 7px;
    height: 55px;
    background-color: #FFFFFF;
    z-index: 100;
    box-shadow: 0px 5px 5px #EDEDED;
}

.logo {
    width: 360px;
    padding-left: 52px;
    padding-top: 8px;
}

.oktTitle {
    margin-bottom: 0px;
    margin-left: 10px;
    font-weight: bold;
}

.mainNav {
    list-style: none;
    display: flex;  
    justify-content: space-between;
    padding-left: 0;
    width: 590px;
    margin-left: 470px;
    margin-top: -32px;
    font-size: 18px;
}

.navItem {
    height: 22px;
}

.navLink:hover .lineHide {
    visibility: hidden;
}

.lineHide {
    visibility: visible; 
    position: relative;
    display: block;
    width: 100%;
    height: 8px;
    background-color: #FFFFFF;
    margin-top: -10px;
}

.mainNav img {
    display: inline;
}

.mainNav img:hover, .oktTitle:hover {
    cursor: pointer;
}

.postTitle {
    font-family: 'Open Sans', sans-serif;
    font-family: 'Special Elite', serif;
    line-height: 130%;
    color: #222222;
}

.postDate {
    font-family: 'Open Sans', sans-serif;
    line-height: 130%;
    color: #999999;
    margin-top: -14px;
}

.previousLink {
    font-weight: bold;
    font-size: 20px;
    line-height: 130%;
    color: #333333;
}

/* CONTAINER FOR PAGE COMPONENTS */
.mainBody {
    max-width: 100vw;
    padding-top: 20px;
    display: block;
    background-color: #FCFCFC;
    margin-top: 50px;
    padding-left: 55px;
}

.pageBody img {
    display: block;
    height: auto;
    width: 100%;
    opacity: 0.9;
}

.backButton {
    max-height: 25px;
    width: auto;
}

.mainBody .wp-caption {
    min-width: 100%;
}

.mainBody .size-full, .mainBody .wp-image-68 {
    min-width: 100%;
}

iframe {
    display: block;
    height: 400px;
    max-width: 100%;
    background-color: #444444;
}

.youtube-player {
    height: 500px;
}

.embed-vimeo iframe {
    min-width: 100%;
    height: 450px;
}

/* ABOUT PAGE */
.aboutBody {
    font-weight: bold;
    width: 65%;
    min-width: 500px;
}

.pressQuote {
    width: 70%;
    font-weight: bold;
    margin-top: 25px;
    background-color: #F6F6F6;
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 8px;
    padding-bottom: 4px;
}

.villagevoice { margin-left: 5%; }
.nyt { margin-left: 22%; }

.aboutHrs .hr2, .aboutHrs .hr3 { width: 100%; } 

.aboutHrs .hr3 {
    display: none;
    width: 100%;
}

.attribution {
    font-weight: bold;
    margin-left: 500px;
    margin-top: -20px;
}

.aboutPic {
    width: 100%;
    opacity: 0.85;
    z-index: 10;
    border: 3px solid #171717;
    box-shadow: 3px 3px 8px #EDEDED;
}

.contactUs {
    height: 18px;
}

/* HOME PAGE */
.homeBody {
    height: 890px;
}

.homeTop {
    padding-top: 20px;
    width: 100%;
    display: flex;
    height: 500px;
}

.featuredBox {
    border: 3px solid #222222;
    width: 60%;
    height: 470px;
}

.featuredBox img {
  object-fit: cover;
  height: 100%;
}

.featuredBox a:hover {
    text-decoration: none;
}

.featuredHover:hover {
    opacity: 0.85;
}

.newsBox {
    width: 30%;
    padding-left: 25px;
    padding-top: 0px;
    height: 140%;
}

.newsBox p {
    color: #444444;
    max-width: 94%;
    font-size: 18px;
    font-weight: bold;
    line-height: 130%;
}

.thumbDiv {
    width: 87.6vw;
    flex-wrap: wrap;
    justify-content: space-between;
    display: flex;
    margin-top: 36px;
    margin-left: -3px;
    margin-right: -2px;
    box-sizing: border-box;
}

.thumbDiv .thumb {
    opacity:0.9;
    z-index:50;
    width:32%;
    height:300px;
    background-color: #FFFFFF;
    box-shadow: 5px 5px 5px #F7F7F7;
    border: 3px solid #333333;
    box-sizing: border-box;
}

.thumbDiv .thumb:hover {
    opacity:0.85;
}

.thumbTitle {
    color: #FFFFFF;
    text-shadow: 2px 2px 6px #333333;
    height: 50px;
    line-height: 130%;
    font-size: 16px;
    background-color: rgba(0,0,0,0.7);
    width: 100%;
    opacity: 0.99;
    z-index: 11;
    margin-top: -53px;
}

.thumbTitle h3 {
    display: inline-block;
    margin-left: 16px;
    margin-top: 18px;
}

.thumbDiv .thumbImg {
    height: 100%;
    width: 100%;
    object-fit: cover;
    opacity: 0.9;
}

.imgCover {
    object-fit: cover;
}

.homeShowDisplay:hover .hoverVisible {
  visibility: visible;
    -webkit-animation: fadein2 0.5s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein2 0.5s; /* Firefox < 16 */
        -ms-animation: fadein2 0.5s; /* Internet Explorer */
         -o-animation: fadein2 0.5s; /* Opera < 12.1 */
            animation: fadein2 0.5s;
}

.hoverVisible {
  visibility: hidden;
}

.hoverVisible:hover {
  cursor: pointer;
}

.homeImg {
    width: 100%;
    margin-bottom: -65px; /* determines title placement */
    opacity: 0.85;
    z-index: 10;
    height: 500px;
}

.homeBody img {
    max-width: 100%;
}

.featuredTitle {
    color: #FFFFFF;
    text-shadow: 2px 2px 6px #333333;
    height: 60px;
    line-height: 130%;
    font-size: 24px;
    background-color: rgba(0,0,0,0.7);
    width: 100%;
    opacity: 0.99;
    z-index: 11;
}

.featuredTitle h3 {
    display: inline-block;
    margin-left: 16px;
    margin-top: 18px;
}


/* OKTHEATER PAGE */
.oktBody {
    width: 65%;
}

/* OKVIDEO PAGE */
.okvBody {
    width: 65%;
}

/* OKRADIO PAGE */
.okrBody {
    width: 65%;
}

/* OKBOOKS PAGE */
.okbBody {
    width: 65%;
}

/* CONTACTS PAGE */
.contactsBody {
    width: 65%;
}

/* FADE ANIMATION */
@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

@keyframes fadein2 {
    from { opacity: 0; }
    to   { opacity: 0.8; }
}

.fades {
    -webkit-animation: fadein 0.5s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 0.5s; /* Firefox < 16 */
        -ms-animation: fadein 0.5s; /* Internet Explorer */
         -o-animation: fadein 0.5s; /* Opera < 12.1 */
            animation: fadein 0.5s;
}

.footer {
  height: 50px;
  padding-left: 50px;
}

/* MOBILE LAYOUT */
@media screen and (max-width: 800px) {

    * {
        max-width: 100vw;
    }

    p {
        font-size: 18px;
        max-width: 96vw;
    }

    iframe {
        display: block;
        max-height: 180px;
        max-width: 100%;
    }

    .postGrid {
      width: 92vw;
    }

    .gridMap {
      width: 100%;
      height: 250px;
    }

    .gridMapVideo {
      width: 100%;
      height: 250px;
    }

    .gridMap p, .gridMapVideo p {
      margin-top: 7px;
      font-size: 18px;
    }

    .pageTitle {
        height: 20px;
    }

    /* MOBILE NAVBAR */
    .oktHeader {
        position: absolute;
        top: 0;
        text-align: left;
        padding-top: 7px;
        height: 120px;
        background-color: #FFFFFF;
        z-index: 100;
        max-width: 100vw;
    }

    .logo {
        width: 70vw;
        margin-left: 2.5vw;
    }

    .oktTitle {
        margin-bottom: 0px;
        margin-left: 10px;
        font-weight: bold;
    }

    .mainNav {
        list-style: none;
        display: flex;  
		flex-wrap: wrap;
        justify-content: start;
        padding-left: 0;
        width: 90vw;
        margin-left: 15px;
        margin-top: 14px;
        font-size: 14px;
    }

	.navItem {
			height: 20px;
			margin-right: 24px;
			margin-bottom: 15px;
	}

  .footer {
    height: 200px;
    width: 102px;
    display: flex;
    flex-wrap: wrap;
    padding-left: 16px;
  }

  .footer a {
    width: 100%;
    margin-bottom: 16px;
  }

    .navLink {
        height: 40px;
    }
    
    .mainNav img {
        display: inline;
    }

    .lineHide {
        margin-top: -24px;
    }
        
    .navLink:hover .lineHide {
        visibility: visible;
    }

    .kafka {
     width: 80vw;
     margin-right: 15vw;
    }

    /* CONTAINER FOR PAGE COMPONENTS */
    .mainBody {
        padding-top: 15px;
        display: block;
        margin-top: 110px;
        padding-left: 15px;
        max-width: 100vw;
    }

    /* HOME PAGE MOBILE*/
    .homeBody {
        height: 1800px;
        margin-left: -15px;
        width: 100vw;
    }

    .homeTop {
        width: 100vw;
        display: block;
    }

    .featuredBox {
        width: 100%;
        box-sizing: border-box;
        height: 300px;
    }

    .homeImg {
        width: 100vw;
        object-fit: cover;
        margin-bottom: -70px; /* determines title placement */
        opacity: 0.8;
        z-index: 10;
        height: 270px;
    }

    .thumbDiv {
        height: 1000px;
        width: 100vw;
        flex-wrap: wrap;
        justify-content: space-around;
        display: flex;
        background-color: #F7F7F7;
        margin-top: 490px;
        padding: 12px;
        margin-bottom: 15px;
    }

    .thumbDiv .thumb {
        opacity:1;
        z-index:50;
        width:100%;
        height:300px;
        background-color: #FFFFFF;
    }

    .thumbDiv .thumb:hover {
        opacity:0.85;
    }

    .thumbDiv .thumbTitle {
    }

    .thumbDiv .thumbImg {
    }

    .featuredTitle {
        color: #FFFFFF;
        text-shadow: 2px 2px 6px #333333;
        width: 100%;
        height: 66px;
        line-height: 130%;
        font-size: 16px;
        opacity: 0.99;
        z-index: 11;
        display: flex;
    }

    .newsBox {
        width: 94vw;
        padding-top: 30px;
        background-color: #FFFFFF;
        height: 140%;
        margin-left: -6px;
        padding-right: 30px;
    }

    /* OTHER PAGES */
    .oktBody {
        width: 93vw;
    }

    .okrBody {
        width: 93vw;
    }

    .okvBody {
        width: 93vw;
    }

    .okbBody {
        width: 93vw;
    }
    .okbBody img {
        max-width: 100%;
    }

    .contactsBody {
        width: 93vw;
    }

    /* ABOUT PAGE MOBILE*/
    
    .aboutBody {
        width: 93vw;
        min-width: 100px;
    }

    .pressQuote {
        width: 96%;
        font-weight: bold;
        margin-top: 30px;
        background-color: #F7F7F7;
        padding: 7px;
    }

    .villagevoice { margin-left: 0%; }
    .nyt { margin-left: 0%; }


    .aboutHrs .hr2 {
        display:none;
        width: 100%;
    }
    .aboutHrs .hr3 {
        width: 100%;
        display: block;
    }

    .aboutPic {
        width: 100vw;
        margin-left: -15px;
        opacity: 0.9;
        z-index: 10;
    }

    .contactUs {
        height: 18px;
    }


}

